// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exported buttons elements DangerButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  bg={
    Object {
      "darker1": "red",
      "darker2": "red",
      "default": "red",
      "lighter1": "red",
      "lighter2": "red",
    }
  }
  border={0}
  borderRadius={4}
  color={
    Object {
      "darker1": "#FFFFFF",
      "darker2": "#FFFFFF",
      "default": "#FFFFFF",
      "lighter1": "#FFFFFF",
      "lighter2": "#FFFFFF",
    }
  }
  disabled={false}
  isIconOnly={false}
  onClick={[Function]}
  padding="8px 16px"
  textDecoration="none"
>
  Danger button
</DynamicButtonComponent>
`;

exports[`Exported buttons elements DropdownButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  bg={
    Object {
      "darker1": "#C5C5C3",
      "darker2": "#949492",
      "default": "F6F6F4",
      "lighter1": "#F8F8F6",
      "lighter2": "#FAFAF8",
    }
  }
  border={0}
  borderRadius={4}
  color={
    Object {
      "darker1": "#332F2F",
      "darker2": "#262323",
      "default": "#403B3B",
      "lighter1": "#666262",
      "lighter2": "#8C8989",
    }
  }
  disabled={false}
  isIconOnly={false}
  onClick={[Function]}
  padding="8px 16px"
  textDecoration="none"
>
  Dropdown button
</DynamicButtonComponent>
`;

exports[`Exported buttons elements FloatingActionButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  alignItems="center"
  bg={
    Object {
      "darker1": "#1D1611",
      "darker2": "#16110D",
      "default": "#241C15",
      "lighter1": "#504944",
      "lighter2": "#7C7773",
    }
  }
  border={0}
  borderRadius="50%"
  color={
    Object {
      "darker1": "#FFFFFF",
      "darker2": "#FFFFFF",
      "default": "#FFFFFF",
      "lighter1": "#FFFFFF",
      "lighter2": "#FFFFFF",
    }
  }
  disabled={false}
  display="flex"
  height="40px"
  isIconOnly={false}
  justifyContent="center"
  onClick={[Function]}
  position="absolute"
  textDecoration="none"
  width="40px"
>
  <Home />
</DynamicButtonComponent>
`;

exports[`Exported buttons elements IconButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  bg="transparent"
  border="none"
  color={
    Object {
      "darker1": "#707070",
      "darker2": "#545454",
      "default": "#8C8C8C",
      "lighter1": "#A3A3A3",
      "lighter2": "#BABABA",
    }
  }
  disabled={false}
  isIconOnly={true}
  onClick={[Function]}
>
  <Home />
</DynamicButtonComponent>
`;

exports[`Exported buttons elements PrimaryButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  bg={
    Object {
      "darker1": "#1D1611",
      "darker2": "#16110D",
      "default": "#241C15",
      "lighter1": "#504944",
      "lighter2": "#7C7773",
    }
  }
  border={0}
  borderRadius={4}
  color={
    Object {
      "darker1": "#FFFFFF",
      "darker2": "#FFFFFF",
      "default": "#FFFFFF",
      "lighter1": "#FFFFFF",
      "lighter2": "#FFFFFF",
    }
  }
  disabled={false}
  isIconOnly={false}
  onClick={[Function]}
  padding="8px 16px"
  textDecoration="none"
>
  Primary button
</DynamicButtonComponent>
`;

exports[`Exported buttons elements PrimaryButton should match previous snapshot 2`] = `
<DynamicLinkButtonComponent
  bg={
    Object {
      "darker1": "#1D1611",
      "darker2": "#16110D",
      "default": "#241C15",
      "lighter1": "#504944",
      "lighter2": "#7C7773",
    }
  }
  border={0}
  borderRadius={4}
  color={
    Object {
      "darker1": "#FFFFFF",
      "darker2": "#FFFFFF",
      "default": "#FFFFFF",
      "lighter1": "#FFFFFF",
      "lighter2": "#FFFFFF",
    }
  }
  disabled={false}
  linkStyle={
    Object {
      "display": "inline-block",
      "fontFamily": "IBM Plex Sans, Helvetica Neue, Arial, sans-serif",
      "fontSize": ".778rem",
      "fontWeight": 600,
      "letterSpacing": 0.32,
      "lineHeight": "1.125em",
    }
  }
  padding="8px 16px"
  textDecoration="none"
>
  Primary Link button
</DynamicLinkButtonComponent>
`;

exports[`Exported buttons elements StandardButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  bg={
    Object {
      "darker1": "#C5C5C3",
      "darker2": "#949492",
      "default": "F6F6F4",
      "lighter1": "#F8F8F6",
      "lighter2": "#FAFAF8",
    }
  }
  border={0}
  borderRadius={4}
  color={
    Object {
      "darker1": "#332F2F",
      "darker2": "#262323",
      "default": "#403B3B",
      "lighter1": "#666262",
      "lighter2": "#8C8989",
    }
  }
  disabled={false}
  isIconOnly={false}
  onClick={[Function]}
  padding="8px 16px"
  textDecoration="none"
>
  Standard button
</DynamicButtonComponent>
`;

exports[`Exported buttons elements SubtleButton should match previous snapshot 1`] = `
<DynamicButtonComponent
  bg={
    Object {
      "darker1": "#FFFFFF",
      "darker2": "#FFFFFF",
      "default": "#FFFFFF",
      "lighter1": "#FFFFFF",
      "lighter2": "#FFFFFF",
    }
  }
  border={0}
  borderRadius={4}
  color={
    Object {
      "darker1": "#707070",
      "darker2": "#545454",
      "default": "#8C8C8C",
      "lighter1": "#A3A3A3",
      "lighter2": "#BABABA",
    }
  }
  disabled={false}
  isIconOnly={false}
  onClick={[Function]}
  padding="8px 16px"
  textDecoration="none"
>
  Subtle button
</DynamicButtonComponent>
`;
